some cosmetic changes to portfolio, need to fix gap on the right of welcome section, fix contact section, and redo the recent work section

--- a/index.css
+++ b/index.css
@@ -8,6 +8,7 @@
 
 
 html {
+
     box-sizing: border-box;
     scroll-behavior: smooth;
 
@@ -19,17 +20,25 @@ html {
   scroll-behavior: smooth;
 }
 
-/*BASE STYLES*/
+/*UNIVERSAL STYLES*/
 body {
-    background-color: rosybrown;
-    font-family: 'Open Sans', sans-serif;
+    display:flex;
+    flex-direction: column;
+    background-color: #fff;
+    font-family: 'Work Sans', sans-serif;
     font-size: 10px; /* 1rem*/
     line-height: 1.2;
+    margin: 0 auto;
+    align-items: center;
 }
 
 h1 {
-    font-size: 2rem;
-    color: seashell;
+    color: #666;
+    font-weight: 900;
+    margin: 3rem 6rem;
+    display: flex;  
+    font-size: 2.75rem;
+   
 }
 
 h2 {
@@ -42,7 +51,7 @@ ul {
 
 a {
     text-decoration: none;
-    color: seashell;
+    color: goldenrod;
 }
 
 img {
@@ -57,10 +66,12 @@ h3 {
 
 /* NAV */
 nav {
-    background-color: seashell;
+    display: flex;
+    background-color: #ab8093;
     position: fixed;
-    width: 100%;
+    justify-content: flex-end;
     padding: 3rem;
+    width: 100vw;
     
 }
 
@@ -98,19 +109,18 @@ nav {
 .nav-list a {
     font-size: 2rem;
     margin-right: 2rem;
-    color: rosybrown;
-    border: 1.5px solid antiquewhite;
+    color: #e6e6e6;
     padding: 0.25em;
     transition: all 0.2s;
 }
 
 .nav-list a:hover {
-   color: rosybrown;
-   background-color:antiquewhite;
+   color: #996666;
+   background-color:#e6e6e6;
 }
 
 .nav-list a:visited{
-    color: rosybrown;
+    color: #f2f2f2;
 }
 
 
@@ -120,38 +130,41 @@ nav {
 
 /* WELCOME-SECTION */
 
-#welcome-section {
-    width: 100%;
-}
+
 
 .welcome-section {
     display:flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    width: 100%;
     height: 100vh;
     margin: 0;
-    background-color: antiquewhite;
+    background-color: #ab8093;
+    justify-self: center;
+    top: 0;
+    left: 0;
+    width: 1600px;
 }
 
 #welcome-section > h1 {
     font-family: 'Sacramento', monospace;
     font-size: 6rem;
-    color: black;
+    color: #ffffff;
 }
 
 #welcome-section > h2 {
-    font-family: 'Open Sans', sans-serif;
+    font-family: 'Work Sans', sans-serif;
     font-size: 2.75rem;
     font-weight: 300;
+    color: #ffffff;
 }
 
 #welcome-section > p {
-    font-family: 'Open Sans', sans-serif;
+    font-family: 'Work Sans', sans-serif;
     font-size: 1.75rem;
     font-weight: 100;
     margin-top: 1rem;
+    color: #ffffff;
 }
 
 @media screen and (max-width: 480px) {
@@ -170,16 +183,9 @@ nav {
 
 /* PROJECT SECTION */
 
-
-
-.projects-header {
-    margin: 3rem auto;
-    display: flex;
-    justify-content: center;
-    font-weight: 300;
-    font-size: 2.75rem;
-    
-    
+#projects {
+    background-color: #ffffff;
+    width: 100%;
 }
 
 @media screen and (max-width: 480px) {
@@ -238,7 +244,6 @@ nav {
 }
 
 .project-title:hover {
-    background-color: seashell;
     transition:  background-color 0.3s ease-in-out;
 }
 
@@ -250,19 +255,14 @@ nav {
 .contact-section {
     display: flex;
     flex-direction: column;
-    justify-content: center;
     align-items: center;
     width: 100%;
     padding: 0 2rem;
     margin-top: 2rem;
-    background: seashell;
+    background: white;
+    height: 75vh;
 }
 
-
-.contact-section > h1 {
-    color: sienna;
-    margin-top: 1rem;
-}
 
 .contact-section > p {
     font-size: 2rem;
@@ -274,19 +274,10 @@ nav {
     display: flex;
     justify-content: center;
     width: 100%;
-    flex-wrap: wrap;
     font-size: 1.75rem;
-    margin: 1.75rem;
-    justify-content: space-around;
+    margin: 1.5rem;
 }
 
-.contact-links > a {
-    color: sienna;
-}
-
-.pdf-download > a {
-    color: sienna;
-}
 
 i {
     padding-right: 0.2rem;
@@ -329,18 +320,18 @@ i {
 
 /* FOOTER */
 footer {
-    background-color: seashell;
-    width: 100%;
+    background-color: #ab8093;
     display: flex;
     flex-direction: row;
-    justify-content: space-evenly;
-    padding: 1rem 2rem;
-    margin: 0 auto;
+    justify-content: flex-end;
+    padding: 1rem 3rem;
+    margin: 0 6rem;
+    width: 100%;
 }
 
 footer > p {
-    font-style: italic;
-    font-size: 1.25rem;
+    font-size: 1.5rem;
     margin-left: 2rem;
+    color: white;
 }
-
+/* need to add social media icon links */
